# eBay-backend-development-assignment

./: .dockerignore  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.prod.yaml  compose.yaml  pyproject.toml
docs/postman/: Ebay Backend Assignment Listing API.postman_collection.json  Ebay Backend Assignment.postman_environment.json
migrations/: env.py
migrations/versions/: 001_create_initial_tables.py  002_listing_entity_association.py
nginx/: nginx.conf
src/: main.py
src/core/: config.py  exceptions.py
src/db/: base.py
src/models/: base.py  listing.py
src/repositories/: listing_repository.py
src/routers/: __init__.py  listing.py  status.py
src/schemas/: dependency.py  listing.py  status.py
src/services/: listing_service.py
tests/: conftest.py
tests/unit/: test_config.py  test_status.py
